Create personal website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <img src="https://anti.hackclub.com/c9_command_line-3357f18326b9b773010e84f02d5d9b13.gif">
+    <h1>Prophet Orpheus</h1>
+    <p>Coder Dino</p>
+    <p>Will code for food</p>
+  </body>
+</html>
 
