Create personal website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <img src="https://anti.hackclub.com/c9_command_line-3357f18326b9b773010e84f02d5d9b13.gif">
